src/objects/Marketing_Basics__c.object
<CustomObject>
    <description>Project Oblix - SECTION 2: BASICS (WORK WITHOUT CREATIVE DELIVERABLES)
Renamed to Other SOW items in reviews</description>
    <fields>
        <fullName>Activities__c</fullName>
        <description>A common list of activities third parties are required for.</description>
        <label>Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Communication Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand equity development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Key Presentations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Leadership Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Leadership Workshops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Led Training for the agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Love Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand Technical &amp;/or Infrastructure Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Status Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Co-ordination (other agencies)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Status Meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Fee_Agency__c</fullName>
        <description>Field to show/hide data in an Agency report, dependent on the value in the SOW Status field</description>
        <formula>IF( 
OR( 
ISPICKVAL( Oblix_SOWMarketing__r.SOW_Status__c , &quot;Awaiting Unilever Approval&quot;), 
ISPICKVAL(Oblix_SOWMarketing__r.SOW_Status__c , &quot;Draft - with Unilever&quot;), 
ISPICKVAL(Oblix_SOWMarketing__r.SOW_Status__c , &quot;Returned by Agency&quot;)), NULL, 
IF( RecordType.DeveloperName = &quot;Activity&quot;, OblixOtherItemFee__c, NULL))</formula>
        <label>Activity Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Activity_Fee_UL__c</fullName>
        <description>For use in the Unilever Non Campaign report, to hide values from the field if the record type is not &apos;Activity&apos;</description>
        <formula>IF( RecordType.DeveloperName = &quot;Activity&quot;, OblixOtherItemFee__c, NULL)</formula>
        <label>Activity Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency_Department__c</fullName>
        <description>New &apos;Digital&apos; picklist value added 17/12/15</description>
        <label>Agency Department</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>Oblix_SOWMarketing__r.Oblix_AgencyEstimate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Field was not being used, so has been relabelled for use in Non Campaign table</description>
        <inlineHelpText>Please enter a full description of the Tasks / Activities required</inlineHelpText>
        <label>Other Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <description>The FTE percentage the resource will be required</description>
        <label>FTE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FTE_report__c</fullName>
        <description>For use in non campaign reports only</description>
        <formula>IF( RecordType.DeveloperName = &quot;Activity&quot;, NULL, TEXT(No_of_Hours_Required__c)+&quot;%&quot;)</formula>
        <label>FTE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year__c</fullName>
        <formula>TEXT( Oblix_SOWMarketing__r.Financial_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year_old__c</fullName>
        <label>Financial Year_old</label>
        <picklist>
            <picklistValues>
                <fullName>FY2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FY2025</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_Agency__c</fullName>
        <description>Field to show/hide data in an Agency report, dependent on the value in the SOW Status field</description>
        <formula>IF( 
OR( 
ISPICKVAL( Oblix_SOWMarketing__r.SOW_Status__c  , &quot;Awaiting Unilever Approval&quot;), 
ISPICKVAL(Oblix_SOWMarketing__r.SOW_Status__c , &quot;Draft - with Unilever&quot;), 
ISPICKVAL(Oblix_SOWMarketing__r.SOW_Status__c , &quot;Returned by Agency&quot;)), NULL , Hourly_Rate_or_FTE__c)</formula>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_or_FTE__c</fullName>
        <description>Field for storing actual hourly rate or FTE (not calculated from &quot;Total Amount&quot; divided by &quot;Hours required&quot;) from Calculator Role Rate record.</description>
        <label>Hourly Rate or FTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Hours_Required_Activity__c</fullName>
        <description>Used in Non Campaign reports in order to exclude the field value from any records that are of type dedicated resource, since they should have a value for FTE not no of hours</description>
        <formula>IF(RecordType.DeveloperName = &quot;Activity&quot;,  No_of_Hours_Required__c   , NULL)</formula>
        <label>No of Hours Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Hours_Required__c</fullName>
        <description>The No of hours to complete these</description>
        <inlineHelpText>Enter the number or hours this activity is estimated to take.</inlineHelpText>
        <label>No of Hours Required</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Campaign_Key__c</fullName>
        <externalId>true</externalId>
        <label>Non Campaign Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OblixCountry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Geography</label>
        <referenceTo>MDO_Geography__c</referenceTo>
        <relationshipName>SWOP_Other_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OblixOtherItemFee__c</fullName>
        <description>Relabelled from &apos;Other Item Fee&apos; to &apos;Activity Fee&apos; as per request from Liliya in order to show correct headings in Non-Campaign reports</description>
        <label>Activity Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oblix_FTE_Real_Price__c</fullName>
        <description>Field label changed from &apos;FTE Real Price&apos; to &apos;Resource Fee&apos; so that the correctly worded label show in SWOP reporting</description>
        <formula>FTE__c *  OblixOtherItemFee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oblix_Hourly_Rate__c</fullName>
        <formula>IF(
    No_of_Hours_Required__c = 0, 
    0,
    IF( RecordType.DeveloperName == &apos;Activity&apos;,
        OblixOtherItemFee__c /  No_of_Hours_Required__c,
        Hourly_Rate_or_FTE__c
    )    
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oblix_SOWMarketing__c</fullName>
        <label>Marketing SOW</label>
        <referenceTo>Marketing_SOW__c</referenceTo>
        <relationshipName>Marketing_Basics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Other_Activities__c</fullName>
        <description>Used to describe the core activities that are not listed</description>
        <label>Other Activities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource_Fee_Agency__c</fullName>
        <description>Field to show/hide data in an Agency report, dependent on the value in the SOW Status field</description>
        <formula>IF( 
OR( 
ISPICKVAL( Oblix_SOWMarketing__r.SOW_Status__c , &quot;Awaiting Unilever Approval&quot;), 
ISPICKVAL(Oblix_SOWMarketing__r.SOW_Status__c , &quot;Draft - with Unilever&quot;), 
ISPICKVAL(Oblix_SOWMarketing__r.SOW_Status__c , &quot;Returned by Agency&quot;)), NULL, 
IF( RecordType.DeveloperName = &quot;Activity&quot;, NULL,OblixOtherItemFee__c ))</formula>
        <label>Resource Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource_Fee_UL__c</fullName>
        <description>For use in Unilever user Non Campaign report. Shows the Resource Fee for a Dedicated Resource</description>
        <formula>IF( RecordType.DeveloperName = &quot;Activity&quot;, NULL, OblixOtherItemFee__c )</formula>
        <label>Resource Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role_Title__c</fullName>
        <label>Role Title</label>
        <picklist>
            <picklistValues>
                <fullName>Global Account Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Chief Creative Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Creative Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Creative Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Creative Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Art Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Copywriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copywriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Art Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Copywriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Artist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>non_campaign_title__c</fullName>
        <label>non campaign title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SWOP Non Campaign Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWOP Non Campaign Items</pluralLabel>
    <recordTypes>
        <fullName>Activity</fullName>
        <active>true</active>
        <description>Additional Activities</description>
        <label>Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resource</fullName>
        <active>true</active>
        <description>Additional Resource fulfillment for SOW</description>
        <label>Dedicated Resource</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>